--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,44 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* Navigation menu */
+
+.nav {
+  @apply h-16;
+  @apply bg-blue-600;
+  @apply flex flex-row items-center justify-between;
+}
+
+.nav a {
+  @apply px-6
+}
+
+.nav a img {
+  @apply py-1;
+}
+
+.nav-links {
+  @apply flex flex-row items-center;
+}
+
+.nav-links li * {
+  @apply h-full  px-10 py-5;
+  @apply text-center align-middle;
+  @apply bg-inherit hover:bg-blue-800 text-white;
+}
+
+.nav-link-icon {
+  @apply h-full px-10 p-5 pt-4;
+  @apply cursor-pointer;
+  @apply bg-inherit hover:bg-blue-800 text-white text-3xl;
+  @apply hidden
+}
+
+@media screen and (max-width: 600px) {
+  .nav-links {
+    @apply hidden
+  }
+  .nav-link-icon {
+    @apply block
+  }
 }
